
- Added Maven mode file for Maven pom.xml files. (#3016057 - Dale Anson)

- Updated javacc mode to better highlight keywords and regular expressions. (Dale Anson)

- Updated Django temlate mode to Django 1.2, added missing keywords
  and better integration with HTML, CSS and JS (Jakub Roztočil)

}}}
{{{ Miscellaneous

- It is now possible to copy several files in the VFS Browser at the same time,
  and copy from/to the OS explorer (Matthieu Casanova)

- Removed LatestVersion plugin.

- HelpViewer font can be configured via Appearance Option Pane. (#3002186 - Alan Ezust)

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

- Implemented feature request #2919875: Namable views. You can now specify a
  name for each view using View -> Set view title. The name is persistent in the
  perspective.xml file.

- In Hypersearchs result panel, the query string length is now limited to 100
  chars by default for display (Matthieu Casanova)

- Applied patch #2887520: Allow filtering the recent file list using file globs,
  e.g. "*.java" or "{*.c,*.h}". (Patch provided by Joerg Spieler)

- New status bar widget design (Matthieu Casanova #1540560)

- New Encodings option pane using drag & drop (Matthieu Casanova)

- Parsing buffer local properties is limited to the first 10000 characters of
  the first and last 10 lines. This is a performance enhancement when loading
  buffers containing very long lines (Matthieu Casanova)

. Added a new option to perform font substitution in the text area when the
  current configured font can't display characters in the buffer. It's disabled
  by default, and can be enabled in the text area option pane, along with the